# TOMULGAD

./: README.md  setup.sh
CNN/: ML-conv.py
MuonGeneration/: CMakeLists.txt  Generator.cc
MuonGeneration/data/: confExample.json
MuonGeneration/dataAnalysis/: analysis.py  basicPlots.py  fluxCalculator.py  makeHLTuple.py  makePOCA.py  makePlot.py  output_0.5m.root  output_1m.root  trackReconstruction.py
MuonGeneration/dataAnalysis/tools/: Event.py  EventLoader.py  FluxCalculator.py  GeometryConversor.py  POCAEstimator.py  Track.py  TrackFinder.py
MuonGeneration/include/: Analysis.hh  ConfigurationGeometry.hh  Detector.hh  DetectorConstruction.hh  DriftChamberLayer.hh  DriftChamberLayerHit.hh  EventAction.hh  EventActionMessenger.hh  GeomObject.hh  LGAD.hh  LGADDigi.hh  LGADSensor.hh  LGADSensorHit.hh  LGADSignalShape.hh  Layer.hh  Phantom.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  Sensor.hh
MuonGeneration/src/: ConfigurationGeometry.cc  Detector.cc  DetectorConstruction.cc  DriftChamberLayer.cc  DriftChamberLayerHit.cc  EventAction.cc  EventActionMessenger.cc  GeomObject.cc  LGAD.cc  LGADDigi.cc  LGADSensor.cc  LGADSensorHit.cc  LGADSignalShape.cc  Layer.cc  Phantom.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  Sensor.cc
MuonGeneration/test/: makeConfigurationFile.py  makeConfigurationFileOneLGAD.py
cry/cry_v1.7/: Makefile  Makefile.common
cry/cry_v1.7/test/: testMain
